# iv_8_vfd_driver

./: README.md
CAD/: Assy.FCStd  Bottom.FCStd  PCB.FCStd  Top.FCStd
Firmware_count/: CMakeLists.txt  main.c
Firmware_main1/: CMakeLists.txt  README.md  comms.c  comms.h  main.c  main.h
PCB_Driver/: .gitignore  ProjectSym.kicad_sym  SingleDigitVFDDriver.kicad_pcb  SingleDigitVFDDriver.kicad_prl  SingleDigitVFDDriver.kicad_pro  SingleDigitVFDDriver.kicad_sch  fp-info-cache  vfd.kicad_sch
PCB_Driver/ProjectFoot.pretty/: IV-11Mounting.step  IV-8 Adapter.kicad_mod
PCB_IV-8/: IV-11Mounting.kicad_pcb  IV-11Mounting.kicad_prl  IV-11Mounting.kicad_pro  IV-11Mounting.kicad_sch  fp-info-cache
PCB_IV-8_Test/: IV-11Mounting.kicad_pcb  IV-11Mounting.kicad_prl  IV-11Mounting.kicad_pro  IV-11Mounting.kicad_sch  fp-info-cache
PCB_IV-8_Test/Library.pretty/: IV-8 VFD.kicad_mod
Sim_OsciSim/: 1N4148WS.TXT  OsciSim.kicad_prl  OsciSim.kicad_pro  OsciSim.kicad_sch  OsciSim.wbk
